# CpSpec

./: .gitignore  README.md
TestRunner/: CMakeLists.txt  TestRunner.h  test_runner.h
WhBelt/: temp.cpp
WhBelt/1-20/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
WhBelt/final-task/: project_template.cpp
WhBelt/week 2/buses1/: Makefile  buses1.cpp  output.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
WhBelt/week 2/buses1-new-version/: Makefile  main.cpp  test2  test2_output.txt
WhBelt/week 2/buses2/: Makefile  buses2.cpp
WhBelt/week 2/buses3/: Makefile  buses3.cpp
WhBelt/week 2/countries/: Makefile  countries.cpp  output.txt
WhBelt/week 2/map_values/: Makefile  map_values.cpp
WhBelt/week 2/synonyms/: Makefile  synonyms.cpp  test2  test2_output  test3
WhBelt/week 2/unique/: Makefile  test1  test2  unique.cpp
WhBelt/week 3/Incognizable/: Makefile  main.cpp
WhBelt/week 3/Person/: main.cpp
WhBelt/week 3/Person2/: main.cpp
WhBelt/week 3/Person3/: Makefile  main.cpp
WhBelt/week 3/Reversible String/: main.cpp
WhBelt/week 3/absolute sort/: main.cpp  output.txt  test1  test2  test3
WhBelt/week 3/reg sort/: main.cpp  output.txt  test1  test2
WhBelt/week 3/sorted-string/: main.cpp
WhBelt/week 4/Calc/: rational_throw.cpp
WhBelt/week 4/Function/: main.cpp
WhBelt/week 4/Function-2/: main.cpp
WhBelt/week 4/Lecture/: Makefile  main.cpp
WhBelt/week 4/Rational/: rational_eq_add_sub.cpp  rational_interface.cpp  rational_io.cpp  rational_map.cpp  rational_mult_div.cpp
WhBelt/week 4/Rational20/: rational_throw.cpp
WhBelt/week 4/ensure/: main.cpp
WhBelt/week 4/file/: 1.cpp  2.cpp
WhBelt/week 4/output/: main.cpp
YelBelt/week 3/decompose/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
YelBelt/week 3/phone number/: CMakeLists.txt  main.cpp  phone_number.cpp  phone_number.h
YelBelt/week 6/course-paper/: CMakeLists.txt  condition_parser.cpp  condition_parser_test.cpp  database.cpp  date.h  main.cpp
(+78 files in other folders)
